# livetranslate

./: .agent.md  .dockerignore  .editorconfig  .env.database  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .pdm-python  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  AGENTS.md  API_INTEGRATION_COMPLETE.md  API_INTEGRATION_PROGRESS.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS_AND_OPTIMIZATION_PLAN.md  COMPLETE_TEST_ERROR_ANALYSIS.md  COMPREHENSIVE_DRY_LEAN_AUDIT.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  COORDINATION_EXECUTION_SUMMARY.md  DATABASE_OPTIMIZATION_SETUP.md  DATABASE_SETUP_GUIDE.md  DEPENDENCY_CHANGES_SUMMARY.md  DEPENDENCY_FIXES_COMPLETE.md  Dockerfile  FINAL_STATUS.md  FIREFLIES_ADAPTATION_PLAN.md  FIXES_IMPLEMENTED.md  FRONTEND_BACKEND_DISCONNECT_ANALYSIS.md  FRONTEND_STREAMING_REPORT.md  LANGUAGE_VALIDATION_FIXES.md  (+55 more)
cpp/: CMakeLists.txt
cpp/include/audio/: audio_capture.hpp  nvAudioEffects.h  nvidia_effects.hpp  wav_file.hpp
cpp/include/gui/: gl_loader.h  glfw_includes.h  imgui_custom.h  imgui_impl_glfw.h  imgui_impl_includes.h  imgui_impl_opengl3.h  imgui_keys.h  imgui_opengl_loader_interface.h
cpp/include/utils/: compat_fix.hpp  math_helpers.h  websocket_client.hpp
cpp/src/: main.cpp
cpp/src/audio/: audio_callbacks.cpp  audio_capture.cpp  nvidia_effects.cpp
cpp/src/gui/: gl_loader.cpp  glfw_includes.h  gui.cpp  gui.hpp  gui_main.cpp  imgui_gl_bindings.cpp  imgui_gui.cpp
cpp/src/utils/: boost_test.cpp  compat_fix.hpp  math_helpers.h
modules/orchestration-service/: .coverage  .dockerignore  .env  .pdm-python  .pre-commit-config.yaml  ARCHITECTURE_FIXES.md  ARCHITECTURE_REVIEW_FIXES.md  AUDIO_PARAMETERS_REFERENCE.md  AUDIO_PROCESSING_ANALYSIS.md  AUDIO_PROCESSING_SUMMARY.md  BOT_CONTAINER_FIXES_NEEDED.md  CLAUDE.md  DATA_PIPELINE_INTEGRATION_GAP.md  DATA_PIPELINE_README.md  DELIVERY_REAL_ENDTOEND_TEST.md  Dockerfile  Dockerfile.react  EVENT_PIPELINE.md  EXAMPLE.md  GOOGLE_MEET_REFERENCES.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIXES_SUMMARY.txt  INTEGRATION_TEST_ANALYSIS.md  LIBRARY_AUDIT.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PIPELINE_INTEGRATION_COMPLETE.md  PIPELINE_INTEGRATION_SUMMARY.md  PRODUCTION_FIXES_SUMMARY.md  QUICKSTART_INTEGRATION_TEST.md  REACT_MIGRATION_COMPLETED.md  REACT_MIGRATION_PLAN.md  README-POETRY.md  README.md  README_AUDIO_TESTING.md  REAL_ENDTOEND_TEST_README.md  SERVICE_REVIEW_FINDINGS.md  STREAMING_INTEGRATION_SUMMARY.md  STREAMING_INTEGRATION_TEST_README.md  TEST_AUDIO_STREAMING.md  TEST_FIXES_SUMMARY.md  (+47 more)
modules/orchestration-service/alembic/: env.py
modules/orchestration-service/captured_data/: 20260224_190411_fireflies_raw_capture.jsonl
modules/orchestration-service/config/: audio_config.yaml  insight_templates.yaml
modules/orchestration-service/config_examples/: README.md  broadcast.json  debug_noise.json  meeting.json  minimal.json  noisy.json  podcast.json
modules/orchestration-service/docs/: CAPTION_SYSTEM_DESIGN.md  PRECOMMIT_ISSUES.md  PRECOMMIT_ISSUES_CLASSIFIED.md  WEBSOCKET_AUDIO_STREAMING.md
modules/orchestration-service/examples/: demo_streaming_integration.py  demo_virtual_webcam_live.py
modules/orchestration-service/input/: .gitkeep
modules/orchestration-service/modules/: plan.md
modules/orchestration-service/monitoring/: README.md
modules/orchestration-service/output/: .gitkeep
modules/orchestration-service/scripts/: deploy-monitoring.sh  replay_captured_data.py  setup_database.py  setup_database.sh  start-orchestration.ps1  start-orchestration.sh
modules/orchestration-service/src/: config.py  dependencies.py  dependencies_connections.py  main.py  main_fastapi.py  orchestration_service.py  segment_deduplicator.py  socketio_whisper_client.py  speaker_grouper.py  streaming_coordinator.py  system_constants.py  (+3 more)
modules/shared/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
modules/translation-service/: .env.example  .pdm-python  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.triton  Dockerfile.triton-simple  Dockerfile.vllm  OPENAI_COMPATIBLE_BACKENDS.md  README-TRITON-SIMPLE.md  README.md  deploy-triton.ps1  docker-compose-gpu.yml  docker-compose-simple.yml  docker-compose-triton-simple.yml  docker-compose-triton.yml  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements-minimal.txt  requirements-openai-compatible.txt  requirements-triton-minimal.txt  requirements-triton.txt  requirements.txt  start-local.sh  start-translation-service.ps1  start-translation-service.sh  test_frontend.html  test_vllm_simple.py
modules/whisper-service/: .dockerignore  .env.example  .pdm-python  ACCURACY_REPORT.md  ALL_REGRESSIONS.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  BUG_FIX_SUMMARY.md  CLAUDE.md  CODE_SWITCHING_ANALYSIS.md  CODE_SWITCHING_ARCHITECTURE_ANALYSIS.md  CODE_SWITCHING_TEST_RESULTS.md  DEVELOPMENT.md  DOMAIN_PROMPTS.md  DX_CHANGES_SUMMARY.md  DX_FILES_INDEX.md  DX_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.npu  E2E_TESTS.md  FEEBACK.md  FEEDBACK.md  FIX_VAD_REGRESSION.md  IMPLEMENTATION_PLAN.md  LID_FIX_SUMMARY.md  MIGRATION_GUIDE.md  MLOPS_PRODUCTION_PATTERN_ANALYSIS.md  MULTILANG_STATUS.md  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  ORCHESTRATION_INTEGRATION.md  PERFORMANCE_IMPROVEMENTS.md  PHASE2_REGRESSION_ANALYSIS.md  PHASE_5_COMPLETION_SUMMARY.md  README.md  STATUS.md  TEST_STATUS.md  WHISPER_LID_ARCHITECTURE.md  create_warmup_audio.py  debug_mixed_audio.py  (+26 more)
tests/integration/: README.md  TEST_RESULTS.md  conftest.py  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements-test.txt  test_alignatt_streaming.py  test_beam_search.py  test_chat_history.py  test_cif_word_boundaries.py  test_computationally_aware_chunking.py  test_context_carryover.py  test_feature_preservation.py  test_in_domain_prompts.py  test_loopback_translation.py  test_silero_vad.py  test_websocket_optimization.py
tools/translation_benchmark/: __init__.py  __main__.py  metrics.py  pyproject.toml  run.py
(+2142 files in other folders)
