# LiveTranslate Project Configuration
# This file provides shared tool configurations for all services

[project]
name = "livetranslate"
version = "1.0.0"
description = "Real-time speech-to-text transcription and translation system with AI acceleration"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
    {name = "LiveTranslate Team", email = "team@livetranslate.com"},
]
keywords = ["transcription", "translation", "speech-to-text", "real-time", "ai", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.uv.workspace]
members = [
    "modules/shared",
    "modules/orchestration-service",
    "modules/whisper-service",
    "modules/translation-service",
]

[tool.bandit]
# Targets for scanning
targets = ["modules/*/src"]

# Exclude directories
exclude_dirs = [
    ".venv",
    "venv",
    "tests",
    "reference",
    "deprecated",
    "__pycache__",
    ".pytest_cache",
]

# Skip specific tests
skips = [
    "B101",  # assert_used - allow in non-production code
    "B104",  # hardcoded_bind_all_interfaces - common in development
    "B108",  # hardcoded_tmp_directory - managed properly
]

[tool.bandit.assert_used]
# Allow assert in test files
skips = ["**/test_*.py", "**/tests/**"]

# =============================================================================
# MyPy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports (for third-party libraries without stubs)
ignore_missing_imports = true

# Disallow untyped definitions in source code
disallow_untyped_defs = true

# Exclude directories
exclude = [
    "reference/",
    "deprecated/",
    ".venv/",
    "venv/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "conftest"
disallow_untyped_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["modules/*/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "npu: marks tests that require NPU",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["modules/*/src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/conftest.py",
    "*/deprecated/*",
    "*/reference/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
    "\\.\\.\\.",
]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Black Configuration (Legacy - Ruff format is preferred)
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | node_modules
  | reference
  | deprecated
)/
'''

# =============================================================================
# isort Configuration (Legacy - Ruff isort is preferred)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src", "modules"]
skip = [".venv", "venv", "build", "dist", "reference", "deprecated"]

# =============================================================================
# Codespell Configuration (Spelling)
# =============================================================================
[tool.codespell]
skip = "*.lock,*.svg,*.min.js,*.min.css,pnpm-lock.yaml,package-lock.json,.git,reference,deprecated,.venv,venv,node_modules"
ignore-words-list = "doubleclick,keypair,reenable,ro,pullrequest,afterall"
check-filenames = true
check-hidden = false

[dependency-groups]
dev = [
    "pre-commit>=3.4.0",
    "ruff>=0.8.0",
    "bandit>=1.8.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.14.0",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.0",
    "codespell>=2.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "vulture>=2.11",
    "autoflake>=2.3.0",
    "sqlfluff>=4.0.0",
]
