[project]
name = "livetranslate-common"
version = "0.1.0"
description = "Shared utilities for LiveTranslate services - logging, middleware, errors, config, health"
authors = [
    {name = "LiveTranslate Team", email = "team@livetranslate.com"},
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "structlog>=24.4.0",
    "fastapi>=0.111.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/livetranslate_common"]
