[tool.poetry]
name = "livetranslate-translation-service"
version = "1.0.0"
description = "LiveTranslate Translation Service - Multi-language translation with OpenAI-compatible backends (Ollama, vLLM, Groq)"
authors = ["LiveTranslate Team <team@livetranslate.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

# Core web framework
flask = "^2.3.0"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.0"
python-socketio = "^5.14.2"

# Alternative REST API (FastAPI)
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

# HTTP clients (critical for OpenAI-compatible backends)
httpx = "^0.28.1"
requests = "^2.31.0"
aiohttp = "^3.8.5"

# Redis for caching (critical for performance)
redis = "^6.4.0"

# Environment and configuration
python-dotenv = "^1.1.1"
pyyaml = "^6.0"

# Language detection
langdetect = "^1.0.9"

# Data handling
numpy = "^2.3.4"
pandas = "^2.0.0"

# Logging
structlog = "^23.1.0"

# Monitoring
prometheus-client = "^0.16.0"

# WebSocket support
websockets = "^15.0.1"
websocket-client = "^1.6.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-xdist = "^3.8.0"
hypothesis = "^6.145.1"

# Code quality
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"

[tool.poetry.group.gpu.dependencies]
# GPU-accelerated translation backends (optional)
# Install with: poetry install --with gpu
# Note: GPU backends not needed when using remote Ollama
# torch = "^2.0.0"
# vllm = "^0.2.0"

[tool.poetry.group.triton.dependencies]
# Triton inference server backend
# Install with: poetry install --with triton
tritonclient = {extras = ["all"], version = "^2.38.0"}

[tool.poetry.scripts]
start-translation = "src.api_server:main"
run-tests = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
