[tool.poetry]
name = "livetranslate-translation-service"
version = "1.0.0"
description = "LiveTranslate Translation Service - Multi-language translation with OpenAI-compatible backends (Ollama, vLLM, Groq)"
authors = ["LiveTranslate Team <team@livetranslate.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

# Core web framework
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-socketio = "^5.5.0"
python-socketio = "^5.12.0"

# Alternative REST API (FastAPI)
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

# HTTP clients (critical for OpenAI-compatible backends)
httpx = "^0.28.0"
requests = "^2.32.0"
aiohttp = "^3.11.0"

# Redis for caching (critical for performance)
redis = "^5.2.0"

# Environment and configuration
python-dotenv = "^1.0.0"
pyyaml = "^6.0.2"

# Language detection
langdetect = "^1.0.9"

# Data handling
numpy = "^2.2.0"
pandas = "^2.2.0"

# Logging
structlog = "^24.4.0"

# Monitoring
prometheus-client = "^0.21.0"

# WebSocket support
websockets = "^14.1"
websocket-client = "^1.8.0"

# Pydantic for data validation
pydantic = "^2.10.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.5.0"
hypothesis = "^6.122.0"

# Code quality
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
ruff = "^0.8.0"

[tool.poetry.group.gpu.dependencies]
# GPU-accelerated translation backends (optional)
# Install with: poetry install --with gpu
# Note: GPU backends not needed when using remote Ollama
# torch = "^2.5.0"
# vllm = "^0.6.0"

[tool.poetry.group.triton.dependencies]
# Triton inference server backend
# Install with: poetry install --with triton
tritonclient = {extras = ["all"], version = "^2.52.0"}

[tool.poetry.scripts]
start-translation = "src.api_server:main"
run-tests = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
