[project]
name = "livetranslate-translation-service"
version = "1.0.0"
description = "LiveTranslate Translation Service - Multi-language translation with OpenAI-compatible backends (Ollama, vLLM, Groq)"
authors = [
    {name = "LiveTranslate Team", email = "team@livetranslate.com"},
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core web framework
    "flask[async]>=3.1.2",
    "flask-cors>=5.0.0",
    "flask-socketio>=5.5.0",
    "python-socketio>=5.12.0",
    # Alternative REST API (FastAPI)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # HTTP clients (critical for OpenAI-compatible backends)
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "aiohttp>=3.11.0",
    # Redis for caching (critical for performance)
    "redis>=5.2.0",
    # Environment and configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    # Language detection
    "langdetect>=1.0.9",
    # Data handling
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    # Logging
    "livetranslate-common",
    # Monitoring
    "prometheus-client>=0.21.0",
    # WebSocket support
    "websockets>=14.1",
    "websocket-client>=1.8.0",
    # Pydantic for data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
start-translation = "src.api_server:main"
run-tests = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
livetranslate-common = { workspace = true }

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.1",
    "hypothesis>=6.122.0",
    # Code quality
    "black>=24.10.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
]
gpu = [
    # GPU-accelerated translation backends (optional)
    # Note: GPU backends not needed when using remote Ollama
    # "torch>=2.5.0",
    # "vllm>=0.6.0",
]
triton = [
    # Triton inference server backend
    "tritonclient[all]>=2.52.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff config centralized in /ruff.toml at project root

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
